--- a/.ssh/config
+++ b/.ssh/config
@@ -1,4 +1,5 @@
 AddKeysToAgent yes
+IdentityFile ~/.keys/id_rsa
 Host surtur
 	Hostname 192.168.2.69
 	User pi
@@ -21,10 +22,22 @@ Host of-jenkins
 Host mc-main
 	Hostname 51.222.42.232
 	User moritz
-Host vbmessage
+Host jf-plesk
 	Hostname 178.238.139.187.srvlist.ukfast.net
 	User vbmessage
 	Port 2020
 Host dl-helenenberg
 	Hostname 168.119.118.96
 	User root
+Host uvp-web
+	Hostname 159.69.20.72
+	User root
+Host lightpi
+	Hostname 192.168.2.71
+	User pi
+Host imnushop
+	Hostname 168.119.181.236
+	User root
+Host vbmessage
+	Hostname 91.121.0.97
+	User ubuntu
