--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -13,29 +13,18 @@
 [color]
 
 ;; Active Colors
-bg = #263238
-fg = #DFDFDF
-ac = #84a18e
-
+bg = #252525
+fg = #f5f5f5
+ac = #00acc1
+mf = #f5f5f5
+ 
 ;; Bars
-bi = #00BCD4
-be = #00BCD4
+bi = #00acc1
+be = #00acc1
 bf = #43a047
 bn = #43a047
 bm = #fdd835
 bd = #e53935
-
-;bg = #112526
-;fg = #AE9793
-;ac = #EE7313
-
-;; Bars
-;bi = #EE7313
-;be = #EE7313
-;bf = #43a047
-;bn = #43a047
-;bm = #fdd835
-;bd = #e53935
 
 trans = #00000000
 white = #FFFFFF
