--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -36,12 +36,12 @@ include-file = ~/.config/polybar/bars.ini
 
 ;; Bar Settings
 
-[bar/bars]
+[bar/main]
 ; Use either of the following command to list available outputs:
 ; If unspecified, the application will pick the first one it finds.
 ; $ polybar -m | cut -d ':' -f 1
 ; $ xrandr -q | grep " connected" | cut -d ' ' -f1
-monitor =
+monitor = HDMI-0
 
 ; Use the specified monitor as a fallback if the main one is not found.
 monitor-fallback =
@@ -55,7 +55,7 @@ monitor-strict = false
 override-redirect = false
 
 ; Put the bar at the bottom of the screen
-bottom = false
+bottom = true
 
 ; Prefer fixed center position for the `modules-center` block
 ; When false, the center position will be based on the size of the other blocks.
@@ -65,7 +65,7 @@ fixed-center = true
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
 width = 100%
-height = 20
+height = 26
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
@@ -89,15 +89,15 @@ foreground = ${color.fg}
 ; doesn't get rounded
 ; Individual top/bottom values can be defined using:
 ;   radius-{top,bottom}
-radius-top = 0.0
+radius-top = 5.0
 radius-bottom = 0.0
 
 ; Under-/overline pixel size and argb color
 ; Individual values can be defined using:
 ;   {overline,underline}-size
 ;   {overline,underline}-color
-line-size = 2
-line-color = ${color.ac}
+overline-size = 2
+overline-color = ${color.ac}
 
 ; Values applied to all borders
 ; Individual side values can be defined using:
@@ -110,22 +110,19 @@ line-color = ${color.ac}
 ; the border is placed withing this area. So you effectively only have the
 ; following horizontal space on the bar:
 ;   width - border-right-size - border-left-size
-border-bottom-size = 1
-border-top-size = 1
-;border-left-size = 1
-;border-right-size = 1
+border-bottom-size = 2
 border-color = ${color.ac}
 
 ; Number of spaces to add at the beginning/end of the bar
 ; Individual side values can be defined using:
 ;   padding-{left,right}
-padding = 1
+padding = 0
 
 ; Number of spaces to add before/after each module
 ; Individual side values can be defined using:
 ;   module-margin-{left,right}
-module-margin-left = 1
-module-margin-right = 1
+module-margin-left = 2
+module-margin-right = 2
 
 ; Fonts are defined using <font-name>;<vertical-offset>
 ; Font names are specified using a fontconfig pattern.
@@ -135,9 +132,12 @@ module-margin-right = 1
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
-font-0 = "Misc Termsyn:size=12;1"
-font-1 = "Wuncon Siji:size=12;1"
-font-2 = "xos4 Terminus:size=12;2"
+;;font-0 = "Misc Termsyn:size=12;1"
+;;font-1 = "Wuncon Siji:size=12;1"
+
+font-0 = "Ubuntu Condensed:size=10;2"
+font-1 = "icomoon\-feather:size=10;2"
+font-2 = "xos4 Terminus:size=12;1"
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
@@ -149,20 +149,20 @@ font-2 = "xos4 Terminus:size=12;2"
 ;alsa backlight battery
 ;bspwm cpu date
 ;filesystem github i3
-;subscriber demo memory
-;menu-apps mpd wired-network
-;wireless-network network pulseaudio
-;name_you_want temperature my-text-label
-;backlight keyboard title ewmh 
+;memory mpd wired-network
+;network pulseaudio temperature
+;keyboard title workspaces
+;;
+;; User modules
+;checknetwork updates window_switch launcher powermenu sysmenu menu
 ;;
 ;; Bars
-;;
 ;cpu_bar memory_bar filesystem_bar mpd_bar 
 ;volume brightness battery_bar 
 
-modules-left = cpu_bar memory_bar filesystem_bar 
-modules-center = mpd_bar 
-modules-right = volume brightness battery_bar 
+modules-left = launcher workspaces
+modules-center = 
+modules-right = updates alsa checknetwork date sysmenu
 
 ; The separator will be inserted between the output of each module
 separator =
@@ -193,7 +193,7 @@ locale =
 ;   center
 ;   right
 ;   none
-tray-position = none
+tray-position = center
 
 ; If true, the bar will not shift its
 ; contents when the tray changes
@@ -212,7 +212,7 @@ tray-transparent = false
 ; ARGB color (e.g. #f00, #ff992a, #ddff1023)
 ; By default the tray container will use the bar
 ; background color.
-tray-background = ${root.background}
+tray-background = ${color.bg}
 
 ; Tray offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 tray-offset-x = 0
@@ -241,7 +241,7 @@ tray-scale = 1.0
 
 ; Enable support for inter-process messaging
 ; See the Messaging wiki page for more details.
-enable-ipc = false
+enable-ipc = true
 
 ; Fallback click handlers that will be called if
 ; there's no matching module handler found.
@@ -332,3 +332,4 @@ pseudo-transparency = false
 ;;	/_____/\____/_/       
 ;;
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
