--- a/.config/polybar/tester-file-1.ini
+++ b/.config/polybar/tester-file-1.ini
@@ -36,7 +36,7 @@ include-file = ~/.config/polybar/bars.ini
 
 ;; Bar Settings
 
-[bar/top]
+[bar/main]
 ; Use either of the following command to list available outputs:
 ; If unspecified, the application will pick the first one it finds.
 ; $ polybar -m | cut -d ':' -f 1
@@ -64,15 +64,15 @@ fixed-center = true
 ; Dimension defined as pixel value (e.g. 35) or percentage (e.g. 50%),
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
-width = 100%
-height = 30
+width = 98%
+height = 26
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in an offset in the x or y direction 
 ; of 50% minus 10 pixels
-offset-x = 0
-offset-y = 0
+offset-x = 1%
+offset-y = 2%:-3
 
 ; Background ARGB color (e.g. #f00, #ff992a, #ddff1023)
 background = ${color.bg}
@@ -96,8 +96,8 @@ radius-bottom = 0.0
 ; Individual values can be defined using:
 ;   {overline,underline}-size
 ;   {overline,underline}-color
-line-size = 2
-line-color = ${color.ac}
+overline-size = 2
+overline-color = ${color.ac}
 
 ; Values applied to all borders
 ; Individual side values can be defined using:
@@ -110,19 +110,19 @@ line-color = ${color.ac}
 ; the border is placed withing this area. So you effectively only have the
 ; following horizontal space on the bar:
 ;   width - border-right-size - border-left-size
-border-bottom-size = 2
+border-top-size = 2
 border-color = ${color.ac}
 
 ; Number of spaces to add at the beginning/end of the bar
 ; Individual side values can be defined using:
 ;   padding-{left,right}
-padding = 1
+padding = 0
 
 ; Number of spaces to add before/after each module
 ; Individual side values can be defined using:
 ;   module-margin-{left,right}
-module-margin-left = 1
-module-margin-right = 1
+module-margin-left = 10
+module-margin-right = 10
 
 ; Fonts are defined using <font-name>;<vertical-offset>
 ; Font names are specified using a fontconfig pattern.
@@ -132,9 +132,12 @@ module-margin-right = 1
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
-font-0 = "Misc Termsyn:size=12;1"
-font-1 = "Wuncon Siji:size=12;1"
-font-2 = "xos4 Terminus:size=12;2"
+;;font-0 = "Misc Termsyn:size=12;1"
+;;font-1 = "Wuncon Siji:size=12;1"
+
+font-0 = "Ubuntu Condensed:size=10;2"
+font-1 = "icomoon\-feather:size=10;2"
+font-2 = "xos4 Terminus:size=12;1"
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
@@ -146,11 +149,9 @@ font-2 = "xos4 Terminus:size=12;2"
 ;alsa backlight battery
 ;bspwm cpu date
 ;filesystem github i3
-;subscriber demo memory
-;menu-apps mpd wired-network
-;wireless-network network pulseaudio
-;name_you_want temperature my-text-label
-;backlight keyboard title workspaces 
+;memory mpd wired-network
+;network pulseaudio temperature
+;keyboard title workspaces
 ;;
 ;; User modules
 ;checknetwork updates window_switch launcher powermenu sysmenu menu
@@ -159,12 +160,12 @@ font-2 = "xos4 Terminus:size=12;2"
 ;cpu_bar memory_bar filesystem_bar mpd_bar 
 ;volume brightness battery_bar 
 
-modules-left = 
-modules-center = workspaces title
-modules-right = keyboard alsa battery date notificationcenter
+modules-left = launcher 
+modules-center = mpd workspaces updates alsa battery backlight checknetwork date 
+modules-right = sysmenu
 
 ; The separator will be inserted between the output of each module
-separator = 
+separator =
 
 ; This value is used to add extra spacing between elements
 ; @deprecated: This parameter will be removed in an upcoming version
@@ -192,7 +193,7 @@ locale =
 ;   center
 ;   right
 ;   none
-tray-position = left
+tray-position = none
 
 ; If true, the bar will not shift its
 ; contents when the tray changes
@@ -211,7 +212,7 @@ tray-transparent = false
 ; ARGB color (e.g. #f00, #ff992a, #ddff1023)
 ; By default the tray container will use the bar
 ; background color.
-tray-background = ${root.background}
+tray-background = ${color.bg}
 
 ; Tray offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 tray-offset-x = 0
@@ -240,7 +241,7 @@ tray-scale = 1.0
 
 ; Enable support for inter-process messaging
 ; See the Messaging wiki page for more details.
-enable-ipc = false
+enable-ipc = true
 
 ; Fallback click handlers that will be called if
 ; there's no matching module handler found.
@@ -331,3 +332,4 @@ pseudo-transparency = false
 ;;	/_____/\____/_/       
 ;;
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
