--- a/.config/polybar/user_modules.ini
+++ b/.config/polybar/user_modules.ini
@@ -124,7 +124,7 @@ click-left = ~/.config/polybar/scripts/lupdates &
 
 [module/window_switch]
 type = custom/text
-content =  Switch
+content =  Switch
 
 ; "content" has the same properties as "format-NAME"
 ;;content-background = #000
@@ -144,12 +144,12 @@ click-right = ~/.config/polybar/scripts/windows
 
 [module/launcher]
 type = custom/text
-content = 
+content = 
 
 ; "content" has the same properties as "format-NAME"
-;;content-background = #000
-content-foreground = ${color.ac}
-;;content-padding = 4
+content-background = ${color.ac}
+content-foreground = ${color.mf}
+content-padding = 3
 
 ; "click-(left|middle|right)" will be executed using "/usr/bin/env sh -c $COMMAND"
 click-left = ~/.config/polybar/scripts/launcher
@@ -160,27 +160,21 @@ click-right = ~/.config/polybar/scripts/launcher-alt
 ;;scroll-up = ~/.config/polybar/scripts/launcher-full
 scroll-down = ~/.config/polybar/scripts/launcher-full
 
-[module/notificationcenter]
-type = custom/text
-content = 
-
-click-left = ~/.config/polybar/scripts/notificationcenter
-
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/sysmenu]
 type = custom/text
-content = 
+content = 
 
 ; "content" has the same properties as "format-NAME"
-;;content-background = #000
-content-foreground = ${color.ac}
-;;content-padding = 4
+content-background = ${color.ac}
+content-foreground = ${color.mf}
+content-padding = 3
 
 ; "click-(left|middle|right)" will be executed using "/usr/bin/env sh -c $COMMAND"
 click-left = ~/.config/polybar/scripts/powermenu
 ;;click-middle = ~/.config/polybar/scripts/powermenu
-;;click-right = ~/.config/polybar/scripts/powermenu-alt
+click-right = ~/.config/polybar/scripts/powermenu-alt
 
 ; "scroll-(up|down)" will be executed using "/usr/bin/env sh -c $COMMAND"
 ;;scroll-up = ~/.config/polybar/scripts/powermenu
@@ -227,8 +221,8 @@ menu-2-1-exec = menu-open-0
 ;;format-prefix = ${menu.icon-menu}
 format-spacing = 1 
 
-label-open = 
-label-close = 
+label-open = 
+label-close = 
 
 
 ; Optional item separator
@@ -255,13 +249,13 @@ expand-right = true
 ;   menu-open-LEVEL
 ;   menu-close
 ; Other commands will be executed using "/usr/bin/env sh -c $COMMAND"
-menu-0-0 = Menu
+menu-0-0 = Menu
 menu-0-0-exec = ~/.config/polybar/scripts/launcher &
-menu-0-1 = Files
+menu-0-1 = Files
 menu-0-1-exec = thunar &
-menu-0-2 = Terminal
+menu-0-2 = Terminal
 menu-0-2-exec = termite &
-menu-0-3 = Browser
+menu-0-3 = Browser
 menu-0-3-exec = firefox &
 
 ; Available tags:
@@ -274,8 +268,8 @@ menu-0-3-exec = firefox &
 ;;format-prefix = ${menu.icon-menu}
 format-spacing = 1 
 
-label-open = 
-label-close = 
+label-open = 
+label-close = 
 
 
 ; Optional item separator
@@ -285,6 +279,26 @@ label-separator = |
 label-open-foreground = ${color.ac}
 label-close-foreground = ${color.ac}
 label-separator-foreground = ${color.ac}
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/colors-switch]
+type = custom/text
+content = 
+
+; "content" has the same properties as "format-NAME"
+;;content-background = ${color.ac}
+;;content-foreground = ${color.bg}
+;;content-padding = 3
+
+; "click-(left|middle|right)" will be executed using "/usr/bin/env sh -c $COMMAND"
+click-left = ~/.config/polybar/scripts/color-switch.sh &
+;;click-middle = ~/.config/polybar/scripts/color-switch.sh &
+click-right = ~/.config/polybar/scripts/color-switch.sh &
+
+; "scroll-(up|down)" will be executed using "/usr/bin/env sh -c $COMMAND"
+;;scroll-up = ~/.config/polybar/scripts/powermenu
+;;scroll-down = ~/.config/polybar/scripts/powermenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;	    __________  ______
