Weird typechange, maybe because it's now a link to the keys repo

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,43 +1,1 @@
-AddKeysToAgent yes
-IdentityFile ~/.keys/id_rsa
-Host surtur
-	Hostname 192.168.2.69
-	User pi
-Host vs
-	Hostname 81.169.143.48
-	Port 3465
-	User moritz
-Host uvpdev
-	Hostname 49.12.14.29
-	User root
-Host flow-main
-	Hostname 116.203.246.12
-	User root
-Host deveko
-	Hostname app.deveko-online.de
-	User mo
-Host of-jenkins
-	Hostname 192.168.2.101
-	User jenkins
-Host mc-main
-	Hostname 51.222.42.232
-	User moritz
-Host jf-plesk
-	Hostname 178.238.139.187.srvlist.ukfast.net
-	User vbmessage
-	Port 2020
-Host dl-helenenberg
-	Hostname 168.119.118.96
-	User root
-Host uvp-web
-	Hostname 159.69.20.72
-	User root
-Host lightpi
-	Hostname 192.168.2.71
-	User pi
-Host imnushop
-	Hostname 168.119.181.236
-	User root
-Host vbmessage
-	Hostname 91.121.0.97
-	User ubuntu
+/home/moritz/.keys/ssh_config
